[workspace]
resolver = "2"
members = ["crates/*", "c-api"]
default-members = ["crates/*"]

[workspace.dependencies]
codegen = { path = "crates/codegen" }
codegen-test-tools = { path = "crates/codegen-test-tools" }
graphmock = { path = "crates/graphmock" }
dominators = { path = "crates/dominators" }
frontend = { path = "crates/frontend" }
fx-utils = { path = "crates/fx-utils" }
graphwalk = { path = "crates/graphwalk" }
ir = { path = "crates/ir" }
ir-graphviz = { path = "crates/ir-graphviz" }
opt = { path = "crates/opt" }
parser = { path = "crates/parser" }

anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
capstone = "0.12.0"
cranelift-entity = "0.112.2"
expect-test = "1.5.0"
hashbrown = { version = "0.15.0", default-features = false }
itertools = { version = "0.13.0", default-features = false }
log = "0.4.22"
smallvec = { version = "1.13.2", default-features = false, features = [
    "const_new",
] }

# This crate is very hot because of filetests, so make sure it gets reasonably
# optimized.
[profile.dev.package.regex-automata]
opt-level = 2
