[workspace]
resolver = "2"
members = ["crates/*", "c-api"]
default-members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
bindings = { path = "crates/bindings" }
codegen = { path = "crates/codegen" }
codegen-test-tools = { path = "crates/codegen-test-tools" }
graphmock = { path = "crates/graphmock" }
dominators = { path = "crates/dominators" }
entity-utils = { path = "crates/entity-utils" }
frontend = { path = "crates/frontend" }
fx-utils = { path = "crates/fx-utils" }
graphwalk = { path = "crates/graphwalk" }
ir = { path = "crates/ir" }
ir-graphviz = { path = "crates/ir-graphviz" }
opt = { path = "crates/opt" }
parser = { path = "crates/parser" }
valmatch = { path = "crates/valmatch" }

anyhow = "1.0.89"
bitflags = { version = "2.6.0", default-features = false }
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
capstone = "0.12.0"
cranelift-bitset = "0.112.2"
cranelift-entity = "0.112.2"
expect-test = "1.5.0"
hashbrown = { version = "0.15.0", default-features = false }
hexfloat2 = { version = "0.1.3", default-features = false }
itertools = { version = "0.13.0", default-features = false }
log = "0.4.22"
pest = { version = "2.7.14", default-features = false }
pest_derive = { version = "2.7.14", default-features = false }
smallvec = { version = "1.13.2", default-features = false, features = [
    "const_new",
] }

[patch.crates-io]
# The latest published version of `hexfloat2` doesn't yet include its `no_std` support; grab a
# version that does.
hexfloat2 = { git = "https://github.com/ericseppanen/hexfloat2.git", rev = "42baa1ffaf641163e2bc63a3fccacab2f3957860" }

# This crate is very hot because of filetests, so make sure it gets reasonably
# optimized.
[profile.dev.package.regex-automata]
opt-level = 2
