[workspace]
resolver = "2"
members = ["crates/*", "c-api"]
default-members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
bindings = { path = "crates/bindings" }
codegen = { path = "crates/codegen" }
codegen-test-tools = { path = "crates/codegen-test-tools" }
graphmock = { path = "crates/graphmock" }
dominators = { path = "crates/dominators" }
entity-utils = { path = "crates/entity-utils" }
frontend = { path = "crates/frontend" }
fx-utils = { path = "crates/fx-utils" }
graphwalk = { path = "crates/graphwalk" }
ir = { path = "crates/ir" }
ir-graphviz = { path = "crates/ir-graphviz" }
opt = { path = "crates/opt" }
parser = { path = "crates/parser" }
slice-utils = { path = "crates/slice-utils" }
valmatch = { path = "crates/valmatch" }

anyhow = "1.0.102"
bitflags = { version = "2.11.1", default-features = false }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
capstone = "0.14.0"
cranelift-bitset = "0.125.4"
cranelift-entity = "0.125.4"
expect-test = "1.5.1"
hashbrown = { version = "0.17.0", default-features = false }
hexfloat2 = { version = "0.1.3", default-features = false }
itertools = { version = "0.14.0", default-features = false }
log = "0.4.29"
pest = { version = "2.8.6", default-features = false }
pest_derive = { version = "2.8.6", default-features = false }
smallvec = { version = "1.15.1", default-features = false, features = [
    "const_new",
] }

[patch.crates-io]
# The latest published version of `hexfloat2` doesn't yet include its `no_std` support; grab a
# version that does.
hexfloat2 = { git = "https://github.com/ericseppanen/hexfloat2.git", rev = "42baa1ffaf641163e2bc63a3fccacab2f3957860" }

# This crate is very hot because of filetests, so make sure it gets reasonably
# optimized.
[profile.dev.package.regex-automata]
opt-level = 2
