[package]
name = "c-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "spidir"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend.workspace = true
ir.workspace = true

log.workspace = true
smallvec.workspace = true

paste = "1.0.13"

[features]
# Unfortunately, this feature has to be subtractive because of the underlying `log` crate.
no_logging = ["log/max_level_off"]
