[package]
name = "c-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "spidir"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend.workspace = true
ir.workspace = true
codegen.workspace = true
opt.workspace = true

log.workspace = true
smallvec.workspace = true

paste = "1.0.15"

[features]
# Unfortunately, this feature has to be subtractive because of the underlying `log` crate.
no_logging = ["log/max_level_off"]
