[package]
name = "c-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "spidir"
crate-type = ["staticlib"]

[dependencies]
bindings.workspace = true

log.workspace = true

[features]
# Unfortunately, this feature has to be subtractive because of the underlying `log` crate.
no_logging = ["log/max_level_off"]
