[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominators.workspace = true
entity-set.workspace = true
fx-utils.workspace = true
graphwalk.workspace = true
ir.workspace = true
log.workspace = true

cranelift-entity.workspace = true
hashbrown.workspace = true
itertools.workspace = true
smallvec = { workspace = true, features = ["drain_filter"] }
bitflags = { version = "2.6.0", default-features = false }

[dev-dependencies]
expect-test.workspace = true
capstone.workspace = true

quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
