[package]
name = "dominators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fx-utils.workspace = true
graphwalk.workspace = true

cranelift-entity.workspace = true
smallvec.workspace = true

[dev-dependencies]
entity-set.workspace = true
graphmock.workspace = true
expect-test.workspace = true
itertools.workspace = true
