[package]
name = "filetests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir.workspace = true
parser = { workspace = true, features = ["std"] }
fx-utils.workspace = true

anyhow.workspace = true
clap.workspace = true
cranelift-entity.workspace = true

filecheck = "0.5.0"
regex = "1.9.3"
glob = "0.3.1"

[dev-dependencies]
expect-test.workspace = true
