[package]
name = "graphmock"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fx-utils.workspace = true
graphwalk.workspace = true

cranelift-entity.workspace = true
