[package]
name = "graphwalk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity-set.workspace = true

cranelift-entity.workspace = true

[dev-dependencies]
expect-test.workspace = true
graphmock.workspace = true
itertools.workspace = true
