[package]
name = "ir-graphviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir.workspace = true
fx-utils.workspace = true

itertools.workspace = true

[dev-dependencies]
parser = { workspace = true, features = ["std"] }

expect-test.workspace = true
