[package]
name = "ir-graphviz"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir.workspace = true
fx-utils.workspace = true

itertools.workspace = true

[dev-dependencies]
parser.workspace = true

expect-test.workspace = true
