[package]
name = "ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = { workspace = true }
smallvec = { workspace = true }

hashbrown = { version = "0.13.2", default-features = false }
rustc-hash = { version = "1.1.0", default-features = false }

[dev-dependencies]
expect-test = { workspace = true }
