[package]
name = "ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fx-utils.workspace = true

cranelift-entity.workspace = true
smallvec.workspace = true

[dev-dependencies]
expect-test.workspace = true
