[package]
name = "opt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
entity-set.workspace = true
fx-utils.workspace = true
ir.workspace = true
valmatch.workspace = true

bitflags.workspace = true
cranelift-entity.workspace = true
itertools.workspace = true
log.workspace = true
smallvec.workspace = true
