[package]
name = "opt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
entity-utils.workspace = true
fx-utils.workspace = true
graphwalk.workspace = true
ir.workspace = true
valmatch.workspace = true

bitflags.workspace = true
cranelift-entity.workspace = true
itertools.workspace = true
log.workspace = true
smallvec.workspace = true

pest = { workspace = true, optional = true }
pest_derive = { workspace = true, optional = true }

[features]
parse-pipeline-desc = ["dep:pest", "dep:pest_derive"]
