[package]
name = "parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fx-utils.workspace = true
ir.workspace = true
itertools.workspace = true

pest = { version = "2.7.14", default-features = false }
pest_derive = { version = "2.7.14", default-features = false }

[features]
std = ["pest/std"]

[dev-dependencies]
expect-test.workspace = true
