[package]
name = "spidirtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir.workspace = true
ir-graphviz.workspace = true
parser = { workspace = true, features = ["std"] }

clap = { version = "4.3.10", features = ["derive"] }
anyhow = "1.0.71"
tempfile = "3.6.0"
