[package]
name = "spidirtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen.workspace = true
ir.workspace = true
ir-graphviz.workspace = true
parser = { workspace = true, features = ["std"] }

clap.workspace = true
anyhow.workspace = true
itertools.workspace = true
log.workspace = true

tempfile = "3.6.0"
env_logger = { version = "0.10.1", default-features = false }

[features]
# Unfortunately, this feature has to be subtractive because of the underlying `log` crate.
no_logging = ["log/max_level_off"]
